# watchers

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml  test.yml
assets/templates/: watcher.service  watchers@.service
config/: config.yml
src/: cli.rs  config.rs  debouncer.rs  file_utils.rs  git.rs  lib.rs  main.rs  systemd.rs  watcher.rs
