[package]
name = "watchers"
version = "0.1.0"
edition = "2024"
description = "Git integrated file watcher"
license = "Apache-2.0"
repository = "https://github.com/TenzinPlatter/watchers"
homepage = "https://github.com/TenzinPlatter/watchers"
documentation = "https://docs.rs/watchers"

[dependencies]
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.28"
notify = { version = "8.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.23.0"
