[package]
name = "watchers"
version = "0.1.0"
edition = "2024"
description = "Git integrated file watcher"
license = "Apache-2.0"
repository = "https://github.com/TenzinPlatter/watchers"
homepage = "https://github.com/TenzinPlatter/watchers"
documentation = "https://docs.rs/watchers"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.28"
notify = { version = "8.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.23.0"
tokio = "1.47.1"
zbus = "5.11.0"
zbus_systemd = { version = "0.25701.0", features = ["systemd1"] }
